vlib/v/parser/tests/anon_fn_return_type.vv
import flag

_ = fn (name string) 
_ = fn (name string) {}
_ = fn (name string) flag.Flag
_ = fn (name string) flag.Flag {return {}}
_ = fn (name string) "hi" + name

